Upgrade to next14

--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "drizzle-orm": "^0.28.5",
+    "eslint-config-next": "latest",
     "lucide-react": "^0.294.0",
-    "next": "^14.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.1.0",
