Move some stuff around and add contentful

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,14 @@
 # Change the query params at the end of the URL to "?ssl={"rejectUnauthorized":true}"
 DATABASE_URL='mysql://YOUR_MYSQL_URL_HERE?ssl={"rejectUnauthorized":true}'
 
+# Contentful
+CONTENTFUL_SPACE_ID=                # The Contentful space in which the content is stored
+CONTENTFUL_ACCESS_TOKEN=            # Used to fetch content from Contentful        
+CONTENTFUL_PREVIEW_ACCESS_TOKEN=    # Used to fetch content/changes that is not yet published  
+CONTENTFUL_MANAGEMENT_TOKEN=        # Used to generate TypeScript types for Contentful
+CONTENTFUL_PREVIEW_SECRET=          # Used to allow only editors to access preview mode
+ 
+
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
