--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "db:studio": "dotenv drizzle-kit studio",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "types:contentful": "export $(cat .env.local | awk '!/^\\s*#/' | awk '!/^\\s*$/'); cf-content-types-generator --spaceId $CONTENTFUL_SPACE_ID --token $CONTENTFUL_MANAGEMENT_TOKEN -o src/lib/contentful/types -X && prettier --write src/lib/contentful/types"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.19.0",
     "@planetscale/database": "^1.11.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
@@ -23,6 +25,7 @@
     "@trpc/server": "^10.43.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "contentful": "^10.6.14",
     "drizzle-orm": "^0.28.5",
     "eslint-config-next": "latest",
     "lucide-react": "^0.294.0",
@@ -44,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "autoprefixer": "^10.4.14",
+    "cf-content-types-generator": "^2.13.0",
     "dotenv-cli": "^7.3.0",
     "drizzle-kit": "^0.19.3",
     "eslint": "^8.54.0",
