--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "latest",
     "react-dom": "latest",
     "server-only": "^0.0.1",
+    "sharp": "^0.33.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
